--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,9 @@
     <title>HPS316 - Technofossil</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
+    <link
+    href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;1,300&display=swap"
+    rel="stylesheet">
   </head>
   <body>
     <noscript>
